--- a/07-the-dom/index.html
+++ b/07-the-dom/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorite Colour</title>
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
+<body onload="console.log('Here are the rectangle IDs')">
     <h1>Favorite Colour</h1>
     <div id="rectangleWrapper"></div>
 
