Modified markup to depict game board.

--- a/homework/08-events/index.html
+++ b/homework/08-events/index.html
@@ -6,10 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <!-- stylesheet -->
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h1>Tic Tac Toe</h1>
+    <div id="game-board">
+        <div class="board-row">
+            <span class="box"></span>
+            <span class="box"></span>
+            <span class="box"></span>
+        </div>
+        <div class="board-row">
+            <span class="box"></span>
+            <span class="box"></span>
+            <span class="box"></span>
+        </div>
+        <div class="board-row">
+            <span class="box"></span>
+            <span class="box"></span>
+            <span class="box"></span>
+        </div>
+    </div>
+
     <script src="./main.js"></script>
 </body>
 
