--- a/homework/08-events/index.html
+++ b/homework/08-events/index.html
@@ -13,19 +13,19 @@
 <body>
     <div id="game-board">
         <div class="board-row">
-            <span class="box"></span>
-            <span class="box"></span>
-            <span class="box"></span>
+            <span class="box" id="1"></span>
+            <span class="box" id="2"></span>
+            <span class="box" id="3"></span>
         </div>
         <div class="board-row">
-            <span class="box"></span>
-            <span class="box"></span>
-            <span class="box"></span>
+            <span class="box" id="4"></span>
+            <span class="box" id="5"></span>
+            <span class="box" id="6"></span>
         </div>
         <div class="board-row">
-            <span class="box"></span>
-            <span class="box"></span>
-            <span class="box"></span>
+            <span class="box" id="7"></span>
+            <span class="box" id="8"></span>
+            <span class="box" id="9"></span>
         </div>
     </div>
 
