--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -5,12 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
+    <title>To-Do List App</title>
+    <!-- Custom styling -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Bootstrap CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
 
+    <div class="container-fluid mx-5 my-5">
+        <div class="row">
 
+            <div class="col-12 col-md py-2">
+                <h2 class="text-primary text-underline">To-do List App</h2>
+            </div>
+            <div class="col-12 col-md py-2">
+                <button class="btn btn-primary">Sign Up</button>
+            </div>
+            <div class="col-12 col-md py-2">
+                <button class="btn btn-outline-primary">Log In</button>
+            </div>
+
+        </div>
+    </div>
 
 </body>
 
