Implemented view switch on signup button click.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <div class="container-fluid mx-5 my-5">
+    <div class="container-fluid mx-2 my-2">
         <div id="title-bar" class="row">
             <div class="col-12 col-md py-2">
                 <h1 class="text-primary">To-do List App</h1>
@@ -35,8 +35,8 @@
 
         </div>
 
-        <div id="signup-form" class="row">
-            <div class="col-12 col-md-7 py-2">
+        <div id="signup-form" class="row visually-hidden">
+            <div class="col-10 col-md-4 py-2">
                 <h4 class="text-primary text-underline">Sign Up</h4>
                 <form>
                     <div>
@@ -55,6 +55,7 @@
                         <label for="registerPassword" class="form-label">Password</label>
                         <input type="password" class="form-control" id="registerPassword">
                     </div>
+                    <button class="btn btn-dark my-2" id="submit">Submit</button>
                 </form>
             </div>
         </div>
