Added new markup for extra validation warnings.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -42,11 +42,13 @@
                     <div class="my-3">
                         <label for="registerFirstName" class="form-label">First name</label>
                         <span id="registerFirstNameError" class="error-note"></span>
+                        <span id="registerFirstNameLengthError" class="error-note"></span>
                         <input type="text" class="form-control" id="registerFirstName">
                     </div>
                     <div class="my-3">
                         <label for="registerLastName" class="form-label">Last name</label>
                         <span id="registerLastNameError" class="error-note"></span>
+                        <span id="registerLastNameLengthError" class="error-note"></span>
                         <input type="text" class="form-control" id="registerLastName">
                     </div>
                     <div class="my-3">
@@ -57,6 +59,7 @@
                     <div class="my-3">
                         <label for="registerPassword" class="form-label">Password</label>
                         <span id="registerPasswordError" class="error-note"></span>
+                        <span id="registerPasswordLengthError" class="error-note"></span>
                         <input type="password" class="form-control" id="registerPassword">
                     </div>
                     <div class="form-check my-3">
