Added email validation via regex. Moved general validation logic to seperate function.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -54,6 +54,8 @@
                     <div class="my-3">
                         <label for="registerEmailAddress" class="form-label">Email address</label>
                         <span id="registerEmailAddressError" class="error-note"></span>
+                        <span id="registerEmailAddressLengthError" class="error-note"></span>
+                        <span id="registerEmailAddressContentError" class="error-note"></span>
                         <input type="email" class="form-control" id="registerEmailAddress">
                     </div>
                     <div class="my-3">
