Implemented login authentication error warning display.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -79,6 +79,7 @@
             <div class="col-10 col-md-4 py-2">
                 <h4 class="text-primary text-underline">Login</h4>
                 <form>
+                    <span id="loginAuthenticationError" class="error-note"></span>
                     <div class="my-3">
                         <label for="loginEmailAddress" class="form-label">Email address</label>
                         <span id="loginEmailAddressError" class="error-note"></span>
@@ -97,6 +98,21 @@
             </div>
         </div>
 
+        <div id="dashboard" class="row visually-hidden">
+            <div class="col-10 col-md-4 py-2">
+                <h4 class="text-primary text-underline">Dashboard</h4>
+                <div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- <div id="" class="row visually-hidden">
+            <div class="col-10 col-md-4 py-2">
+                <h4 class="text-primary text-underline"></h4>
+                <div></div>
+            </div>
+        </div> -->
     </div>
 
     <!-- Custom behaviour -->
