Implemented authentication bar to display content for actions for only logged in users.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -32,7 +32,15 @@
             <div class="col-12 col-md py-2">
                 <button class="btn btn-outline-primary" id="login">Log In</button>
             </div>
+        </div>
 
+        <div id="authBar" class="visually-hidden row py-2">
+            <div class="col-10 col-md-4 py-2">
+                <div class="col-12 col-md py-2 d-flex justify-content-between">
+                    <button class="btn btn-primary" id="login">Account Settings</button>
+                    <button class="btn btn-outline-primary" id="login">Log Out</button>
+                </div>
+            </div>
         </div>
 
         <div id="signupForm" class="row visually-hidden">
@@ -80,6 +88,7 @@
                 <h4 class="text-primary text-underline">Login</h4>
                 <form>
                     <span id="loginAuthenticationError" class="error-note"></span>
+                    <span id="userExistenceError" class="error-note"></span>
                     <div class="my-3">
                         <label for="loginEmailAddress" class="form-label">Email address</label>
                         <span id="loginEmailAddressError" class="error-note"></span>
@@ -102,7 +111,7 @@
             <div class="col-10 col-md-4 py-2">
                 <h4 class="text-primary text-underline">Dashboard</h4>
                 <div>
-
+                    <div id="content"></div>
                 </div>
             </div>
         </div>
