Completed logout flow.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -34,11 +34,11 @@
             </div>
         </div>
 
-        <div id="authBar" class="visually-hidden row py-2">
+        <div id="authBar" class="row visually-hidden py-2">
             <div class="col-10 col-md-4 py-2">
                 <div class="col-12 col-md py-2 d-flex justify-content-between">
-                    <button class="btn btn-primary" id="login">Account Settings</button>
-                    <button class="btn btn-outline-primary" id="login">Log Out</button>
+                    <button class="btn btn-primary" id="accountSettings">Account Settings</button>
+                    <button class="btn btn-outline-primary" id="logout">Log Out</button>
                 </div>
             </div>
         </div>
