--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -143,7 +143,7 @@
                         <label for="updatePassword" class="form-label">Password</label>
                         <span id="updatePasswordError" class="error-note"></span>
                         <span id="updatePasswordLengthError" class="error-note"></span>
-                        <input type="password" class="form-control" id="updatePassword">
+                        <input type="text" class="form-control" id="updatePassword">
                     </div>
                     <div class="form-check my-3">
                         <label for="updateTerms" class="form-check-label">
