Completed account settings update flow.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -151,7 +151,7 @@
                         <input class="form-check-input" type="checkbox" id="updateTerms">
                         <p id="updateTermsError" class="error-note"></p>
                     </div>
-                    <button class="btn btn-dark my-3" id="updateSubmit">Sign Up</button>
+                    <button class="btn btn-dark my-3" id="updateSubmit">Update</button>
                 </form>
             </div>
         </div>
