--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -112,10 +112,6 @@
                 <h4 class="text-primary text-underline">Dashboard</h4>
                 <button id="createNewList" class="btn btn-dark my-1">Create New to-do List</button>
                 <div id="lists" class="my-3">
-                    <p class="visually-hidden" id="noListNotice">
-                        <i class="bi bi-info-circle-fill me-1"></i>
-                        No lists exist
-                    </p>
                     <h4 id="listingsHeader" class="visually-hidden my-3">Lists</h4>
                 </div>
             </div>
@@ -132,6 +128,31 @@
                         <label for="listName" class="form-label">To-do list name</label>
                         <span id="listNameError" class="error-note"></span>
                         <input type="text" class="form-control" id="listName">
+                    </div>
+                    <button class="btn btn-dark my-3" id="createListSubmit">Save</button>
+                </form>
+            </div>
+        </div>
+
+        <div id="newListItem" class="row visually-hidden">
+            <div class="col-10 col-md-4 py-2">
+                <button id="newListItem2todoList" class="btn btn-outline-dark my-3">
+                    <i class="bi bi-backspace-fill"></i> Back
+                </button>
+                <h4 class="text-primary text-underline">Add New Item</h4>
+                <form>
+                    <div class="my-3">
+                        <label for="listItemName" class="form-label">Item name</label>
+                        <span id="listItemNameError" class="error-note"></span>
+                        <input type="text" class="form-control" id="listItemName">
+                    </div>
+                    <div class="my-3">
+                        <div class="form-check">
+                            <label for="itemDoneStatus" class="form-check-label">
+                                Done</label>
+                            <input class="form-check-input" type="checkbox" id="itemDoneStatus">
+                            <p id="itemDoneStatusError" class="error-note"></p>
+                        </div>
                     </div>
                     <button class="btn btn-dark my-3" id="createListSubmit">Save</button>
                 </form>
