Implemented account settings view switch from different views.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -161,6 +161,9 @@
 
         <div id="updateForm" class="row visually-hidden">
             <div class="col-10 col-md-4 py-2">
+                <button id="updateForm2Dashboard" class="btn btn-outline-dark my-3">
+                    <i class="bi bi-backspace-fill"></i> Dashboard
+                </button>
                 <h4 class="text-primary text-underline">Update Profile</h4>
                 <form>
                     <div class="my-3">
