Added logic to handle filling in dashboard content.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -113,6 +113,7 @@
                 <button id="createNewList" class="btn btn-dark my-1">Create New to-do List</button>
                 <div id="lists" class="my-3">
                     <h4 id="listingsHeader" class="visually-hidden my-3">Lists</h4>
+                    <div id="listings"></div>
                 </div>
             </div>
         </div>
@@ -154,7 +155,7 @@
                             <p id="itemDoneStatusError" class="error-note"></p>
                         </div>
                     </div>
-                    <button class="btn btn-dark my-3" id="createListSubmit">Save</button>
+                    <button class="btn btn-dark my-3" id="creatListItemSubmit">Save</button>
                 </form>
             </div>
         </div>
