--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -118,6 +118,17 @@
             </div>
         </div>
 
+        <div id="todoList" class="row visually-hidden">
+            <div class="col-10 col-md-4 py-2">
+                <button id="todoList2Dashboard" class="btn btn-outline-dark my-3">
+                    <i class="bi bi-backspace-fill"></i> Back
+                </button>
+                <h4 id="todoListName" class="my-3"></h4>
+                <button id="createNewList" class="btn btn-dark my-1">Add New Item</button>
+                <div id="todoListItems"></div>
+            </div>
+        </div>
+
         <div id="newList" class="row visually-hidden">
             <div class="col-10 col-md-4 py-2">
                 <button id="newList2Dashboard" class="btn btn-outline-dark my-3">
