Completed list item add functionality.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -160,10 +160,9 @@
                     </div>
                     <div class="my-3">
                         <div class="form-check">
-                            <label for="itemDoneStatus" class="form-check-label">
+                            <label for="listItemDoneStatus" class="form-check-label">
                                 Done</label>
-                            <input class="form-check-input" type="checkbox" id="itemDoneStatus">
-                            <p id="itemDoneStatusError" class="error-note"></p>
+                            <input class="form-check-input" type="checkbox" id="listItemDoneStatus">
                         </div>
                     </div>
                     <button class="btn btn-dark my-3" id="creatListItemSubmit">Save</button>
