Implemented switch to list functionality. Displayed items specific to independent lists.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -142,7 +142,7 @@
                 </button>
                 <h4 id="todoListName" class="my-3"></h4>
                 <button id="createNewListItem" class="btn btn-dark my-1">Add New Item</button>
-                <div id="todoListItems"></div>
+                <div id="todoListItems" class="my-3"></div>
             </div>
         </div>
 
