Implemented to-do list name update functionality.

--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -166,9 +166,9 @@
                 <button id="todoList2Dashboard" class="btn btn-outline-dark my-3">
                     <i class="bi bi-backspace-fill"></i> Back
                 </button>
-                <div id="updateListName" class="my-3 list-name">
+                <div id="todoListIdentifier" class="my-3 list-name">
                     <i class="bi bi-pencil-square"></i>
-                    <strong><span id="todoListName"></span></strong>
+                    <strong><span id="todoListName"><span></strong>
                 </div>
                 <button id="createNewListItem" class="btn btn-dark my-1">Add New Item</button>
                 <div id="todoListItems" class="my-3"></div>
@@ -202,7 +202,7 @@
                     <div class="my-3">
                         <label for="updateListName" class="form-label">To-do list name</label>
                         <span id="updateListNameError" class="error-note"></span>
-                        <input type="text" class="form-control" id="listName">
+                        <input type="text" class="form-control" id="updateListName">
                     </div>
                     <button class="btn btn-dark my-3" id="updateListSubmit">Save</button>
                 </form>
