--- a/projects/01-to-do-list/index.html
+++ b/projects/01-to-do-list/index.html
@@ -185,6 +185,7 @@
                     <div class="my-3">
                         <label for="listName" class="form-label">To-do list name</label>
                         <span id="listNameError" class="error-note"></span>
+                        <span id="listNameUniqueError" class="error-note"></span>
                         <input type="text" class="form-control" id="listName">
                     </div>
                     <button class="btn btn-dark my-3" id="createListSubmit">Save</button>
@@ -197,11 +198,12 @@
                 <button id="updateList2todoList" class="btn btn-outline-dark my-3">
                     <i class="bi bi-backspace-fill"></i> Back
                 </button>
-                <h4 class="text-primary text-underline">Update New to-do List</h4>
+                <h4 class="text-primary text-underline">Update to-do List</h4>
                 <form>
                     <div class="my-3">
                         <label for="updateListName" class="form-label">To-do list name</label>
                         <span id="updateListNameError" class="error-note"></span>
+                        <span id="updateListNameUniqueError" class="error-note"></span>
                         <input type="text" class="form-control" id="updateListName">
                     </div>
                     <button class="btn btn-dark my-3" id="updateListSubmit">Save</button>
